--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -49,7 +49,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.11]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.14]</h1><br><br><br>
 
 
 
@@ -58,6 +58,212 @@
 
 
 
+
+
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 153p] 고객마다 욕구와 선호도는 각양각색이다. 각 개인들마다 뇌의 동기 시스템과 감정 시스템이 다르게 혼합되어 있기 때문에 이런 차이점이 발생한다. 뇌 연구에서 얻은 결과물을 기준으로 고객을 분류하고, 고객 유형에 맞춘 상품과 브랜드를 파악할 수 있다면 고객의 마음(변연계)을 명중시킬 수 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 144-145p] 우리는 우리가 원하는 것을 하는 게 아니라, 우리가 하는 것을 원한다.
+    소비자는 광고를 비롯해 외부에서 유입되는 수많은 정보가 자신의 행동에 많은 영향을 끼친다는 사실을 알지 못한다. 문제는 소비자의 의식이 이 사실에 대해 아무것도, 진짜 아무것도 눈치 채지 못한다는 것이다. 시장연구원이 소비자에게 설문조사를 하면, 소비자들은 본인이 얼마나 신중하게 고민해서 이 제품을 의식적으로 구매했는지 확신에 찬 어조로 말한다. 그러나 소비자는 자신의 의식이 나중에 이 이야기를 꾸며냈다는 것, 그리고 완전히 다른 논리로 무의식적 프로그램에 복종했다는 사실은 전혀 알지 못한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 144p] 신경정보학자들은 고객이 1초당 40비트의 정보만 자신의 의식에 보내는 것으로 추정하고 있다. 그러니까 정보의 0.00004퍼센트만 고객의 의식에 들어가는 셈이다. 따라서 의식은 정보 전체가 아니라 그중 일부를 선별한 결과일 뿐이다. 뇌의 진정한 독창성은 정보를 인식하는 능력에 있는 것이 아니라, 무의식적으로 정보를 처리하고 저장하는 능력과 행동으로 전환하는 능력에 있는 것이다. 고객들은 날마다 무수히 많은 광고 메시지에 노출된다. 뇌는 이 메시지들을 무의식적으로 처리하기 때문에 대부분은 의식이 지각하지 못한다. 앞서 보았듯이, 소비자는 매장의 진열대 앞에서 무의식적으로 손을 뻗어 제품을 구매한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 138-139p] 문제는 고통 및 처벌 중심부가 활성화하면, 고객은 그러한 상황과 자극을 피하려고 시도한다는 점이다. 기분은 바닥까지 떨어지고, 자신이 처한 위험과 상품 구매에 대비하기 위해 극도로 비판적인 상태가 된다. 반면 보상 중심부가 활성화하면 완전히 정반대 상황이 벌어진다. 우리는 점점 더 복잡해지고 예측 불가능해지는 세상에 살고 있다. 그러니 고객이 뇌를 최대한 쉽게 사용할 수 있도록 도와주는 노력이 필요하다.
+    <br><br>
+
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 135p] 뇌와 무의식은 혼자서 비밀리에 작업하는 것을 즐긴다. 뇌와 무의식은 자신의 소유자에게 자신들의 계획을 알려주지 않은 채 바로 행동으로 옮긴다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 134p] 상품을 팔 때는, 상품의 기능이 고객의 목표 달성에 도움을 줘야 한다는 것을 명심해야 한다. 그런데 고객과 소비자의 목표는 동기 및 감정 프로그램에 의해 결정된다!
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 131p] 의식적인 '자아'는 적극적인 의사 결정자라기보다 무의식의 조종을 받는 관객에 가깝다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 126p] 빅 3의 조종방법<br>
+    * 균형 시스템: 고객은 불안과 공포를 피하려 하거나 없애려 한다(불쾌함). 반대로 안전함과 안락함은 언제나 좋아한다(유쾌함).<br>
+    * 지배 시스템: 고객은 패배, 짜증, 분노, 자신의 지위에 대한 불만족을 피하려 하거나 없애려 한다(불쾌함). 반대로 승리감이나 칭찬(유쾌함) 등을 대단히 소중히 여긴다.<br>
+    * 자극 시스템: 고객은 지루함, 단조로움(불쾌함)은 피하려 하고, 흥미롭고 흥분되는 경험과 기분전환은 언제나 좋아한다(유쾌함).
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 124p] 변연계는 결정 과정에 매우 강하게 관여하며, 동기 및 감정 시스템, 그와 결부된 구매욕구의 발원지다. 최후의 구매결정도 변연계에서 내려진다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 121-122p] 좌뇌는 낙관적이고 우뇌는 비관적이다. (중략) 실제로 좌뇌에서는 도파민 농도와 테스토스테론의 농도가 더 진하게 측정된다. (중략) 도파민은 자극 시스템의 연료에 해당하며, 낙관적인 태도를 갖고 앞으로 나아가게 한다. 테스토스테론은 지배 시스템의 일부인데, 의식 속에서 낙관적인 분위기를 조성한다.
+    좌뇌가 앞으로 나아가게 하는 반면, 우뇌는 주의를 기울이게 한다. 따라서 다음과 같은 두 가지의 사고방식은 밀접하게 연결돼 있다. 우뇌는 우리가 아직 해결책을 찾지 못한 문제와 맞닥뜨렸을 때 특히 활성화된다. 우뇌는 시공간의 패턴과 규칙을 찾는다. 그래서 우뇌는 얼굴의 감정적 처리에 더 깊게 몰두한다. 왜냐하면 얼굴도 복잡한 이미지에 속하기 때문이다. 그리고 그러한 규칙들이 발견되면 우뇌는 이 규칙을 좌뇌로 내보낸다. 언어가 대부분 좌뇌에서 처리되는 것도 이런 이유에서다. 단어의 내용(의미론)과 문법은 세상을 묘사하는 규칙이다. 반대로 우뇌에서는 언어의 리듬과 언어의 멜로디가 생성된다.
+    우리가 어떤 과제에 직면하면 좌뇌는 이미 배운 규칙과 모형을 적용하려고 한다. 이것이 성공하면 우리의 의식은 기쁨을 경험하게 되고, 나아가 작은 실험을 할 준비까지 한다. 반대로 성공하지 못하면 불안해져서 그 일을 더 정확히 관찰해 새로운 해결책을 찾으려고 시도한다. 이를 달리 표현하자면, 좌뇌는 지성(규칙 적용)의 조정을 약간 더 받고, 우뇌는 이성(감정의 극대화)의 조정을 약간 더 받는다고 볼 수 있다. 그러나 양쪽 뇌는 모두 감정적이다.
+    이 사실은 다양한 감정이 다양한 사고방식과 연관돼 있다는 것을 명확하게 보여준다. 균형 시스템, 특히 이것과 연관된 두려움과 불안함은 사물이나 상황을 정확하게 관찰하게 하고 디테일에 주목하게 한다. 지배 시스템은 더 강한 규칙을 찾아서 모든 것을 규칙 안에 묶어두려 한다. 자극 시스템은 이미 학습한 규칙을 새롭고 창조적으로 연결하고, 이를 통해서 행동의 범위를 확대하려고 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 117p] '지성'은 '인식적' 지능이다. 지성으로 우리는 인과관계를 발견할 수 있고, 삶과 자연의 복잡성을 구조화할 수 있다. 즉 세계에 질서를 부여할 수 있다.
+    그런데 왜 우리는 세계에 질서를 부여할까? 첫째는 세계를 옟측하고 통제하기 위해서고, 둘째는 세계를 지배하기 위해서도. 두 가지 이유 모두 굉장이 감정적인데, 모두 Limbic® 맵의 '규율/통제'에 나와 있다. 지성을 감정의 끄트머리에 달린 물방울로도 볼 수 있다.
+    하지만 지성과 관련해 다른 중요한 측면이 있다. 지성은 인생의 요구사항을 극복하기 위한 도구라는 점이다. 이 도구를 어떻게 사용하는지는 감정 시스템에 의해 결정된다. 지성으로 기관총을 만들 수도 있고(지배 시스템), 기아 문제로 심각한 개발도상국을 위해 관개시설을 만들 수도 있다.(돌봄 모듈).
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 116p] 우리는 이성에 대한 좀 더 정확한 정의를 토머스 홉스에게서 찾을 수 있다. 그는 "이성"은 결과를 계산할 수 있는 능력이다."라고 말했다. (중략) 결과를 계산하는 행위는 굉장히 감정적인 과정을 거쳐서 일어난다. 그래서 우리는 이성도 굉장히 감정적이라고 말할 수 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 109p] 모든 결정의 70~80퍼센트는 무의식적으로 내려진다. 그러나 나머지 20~30퍼센트도 우리가 생각한 것만큼 그렇게 의식적인 결정은 아니다.
+    외부에서 들어오는 정보 중 0.00004퍼센트만이 우리의 의식에 도달한다. 수많은 자극과 신호는 고객이 깨닫지도 못한 사이에 뇌에 의해 바로 행동으로 옮겨진다.
+    고객이 하는 모든 중요한 결정은 감정적이다. 감정적인 요소가 없는 결정은 뇌에서는 아무런 의미가 없다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 108p] 우리는 고객이 합리적이고 의식적으로 행동한다는 믿음이 착각일 뿐이라는 것을 알게 됐다. 구매결정은 주로 감정적으로 내려진다. 고객과 소비자의 '자아'는 자신의 구매결정에 별다른 영향을 끼치지 못한다. 대뇌변연계는 고객의 머릿속에 있는 권력의 중심지다. 무의식의 힘은 우리와 고객이 짐작하는 것보다 훨씬 강력하다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 106-107p] 고객의 지갑을 열어 더 많은 돈을 쓰게 하려면, 돈과 이별하는 소비자의 고통을 긍정적인  감정으로 상쇄시켜줘야 한다. 상품 자체가 높은 감정적 가치를 전달할 때 더 비싼 값을 받을 수 있다. 체험적 성격이 강한(자극) 상품은 '되도록 적은 돈으로 많은 경험을 하는 것'을 충족시킨다. 만일 상품이 머릿속의 동기 및 감정 시스템을 지루하게 만들면 가치와 가격은 떨어진다. 지배 시스템은 가격 깎는 것을 능력의 척도로 여기는데, 상품 자체가 높은 지위와 독점권을 약속해준느 경우에는 흔쾌히 이런 싸움을 포기한다. 수많은 고급 브랜드가 가격을 비싸게 책정하는 것도 바로 가격 자체가 이미 배타적 독점을 표현하기 때문이다. 균형 시스템도 절약 행위에서 벗어나라고 꼬드길 때가 있는데, 높은 수준의 안전성, 품질, 신뢰성을 약속하는 상품과 서비스가 제공될 때다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 103p] 자극 시스템은 가벼운 가격 흥정에서 만족을 찾기에, 이때 중요한 것은 가격 협상에서 얻는 즐거움이다. (중략)
+    지배 시스템은 고객을 자극해 다른 사람보다 더 나은 사람이 되라며 동기를 부여한다. 여기서 가격 흥정은 전쟁의 성격을 띤다. 소비자는 싸워서 가격 인하라는 결과물을 성취하는데, 이를 자신의 현명함과 자기 뜻을 관철시킨 힘의 척도로 받아들인다.
+    균형 시스템은 절약의 원조다. 그것은 앞날을 대비해 저축의 동기를 부여한다. 한편 균형 시스템은 자극 및 지배 시스템의 적이기도 하다. 체험을 하거나 지위를 얻는 데 더 많은 돈을 쓰거나 위험을 감수하려 하지 않는다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 102-103p] 고객의 욕망은 끝이 없다. 그들의 동기 및 감정 프로그램은 이미 얻은 것에 절대 만족하지 않는다. 이구동성을오 '더 많이'를 외친다. 그러다 보니 고객은 항상돈이 부족할 수밖에 없다. 세상의 다른 모든 생물체와 마찬가지로, 인생은 사람들에게 최소한의 자원(돈)과 에너지로 최대한의 욕구를 만족시키라는 과제를 매일매일 부과한다. (중략) 가급적 적은 돈으로 많은 욕구를 만족시키기 위해서는 소비하기 전에 신중히 검토하고 계산하고 노력해야 한다.
+    이처럼 '적은 지출'로 '최대한의 즐거움'을 끌어내는 것을 생물학과 철학에서는 '합리성'으로 이해한다. 그런데 이러한 형태의 합리성은 굉장히 감정적인 특징을 지니고 있다. 왜냐하면 긍정적이고 뿌듯한 감정은 최대화시키고, 부정적인 감정은 가급적 회피하려는 목적을 지니고 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 98p] 합리성 뒤에 숨겨져 있는 욕구, 즉 우리가 살아가는 세계, 환경, 상품을 지배하고 예측 가능하게 만드는 욕구는 굉장이 감정적인 성격을 지녔다고 할 수 있다! 이는 두 가지를 의미한다. 하나는 '합리성'이 완전히 감정적인 개념이라는 뜻이고, 다른 하나는 '합리성'이 감정의 대립 개념이 될 수 없다는 뜻이다. 나아가 여기서 또 하나의 중요한 깨달음을 얻을 수 있다. 서구적 합리성이라는 개념이 인간의 동기, 사고, 감정의 일부분일 뿐이라면, '합리적인 것'처럼 보이는 사고 형태가 전권을 쥐겠다고 요구할 수는 없다는 점이다. 창의적이며 예측할 수 없는 사고(자극)와 신중하고 사색적인 사고(균형)는 합리성과 똑같은 정당성과 중요성을 갖고 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 89p] '뇌를 유혹하는 상품'이라 이름 붙인 이유는 소비자가 이 상품들을 동경하며, 이것 없이는 살아갈 수 없다고 믿을 정도로 뇌 속의 감정 및 동기 시스템을 강하게 활성화하기 때문이다. 이 상품들은 그 자체로 엄청난 매력을 발산한다. 또한 그것을 사용하는 사람의 지위와 개성을 드러내주기도 한다.
+    이 상품들은 감정의 출력을 높이는 강력한 브랜드를 필요로 한다. 여기에 해당하는 상품에는 스포츠카, 유명 브랜드 화장품, 디자이너 패션 제품, 첨단 스포츠 장비, 최신형 스마트폰, 영적인 구원을 약속하는 상품, 스토리가 담긴 상품, 멀티 감성이 풍부한 상품 등이 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 87p] 상품이 구별동기인 '개성', '지위', '성적 매력'을 만족시킨다면, 소비자는 그 상품을 구매하는 데 엄청나게 많은 돈을 쓸 준비가 돼 있는 것이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 86p] 상품이 기능적으로 쓸모 있기 때문에 구매하는 것만은 아니란 말이다. 우리는 다른 사람에게 영향을 미치거나 혹은 우리가 그 영향을 받기 위해서도 구매한다. 그뿐 아니다. 사회적 상징이나 사회적 선언의 일환으로 상품을 구매하기도 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 81p] 상품과 서비스가 소비자에게 제공하는 진정한 가치는 감정 및 동기의 '눈'으로 상품을 관찰할 때에 분명하게 나타난다. 고객이 상품을 의식하고 있지 않더라도, 이 상품은 항상 소비자의 머릿속에서 특수한 감정 시스템을 활성화한다. 그리고 소비자의 감정 시스템을 사로잡을 수 있을 때만 상품과 서비스는 가치가 있다!
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 81p] 상품과 서비스의 가치는 머릿속에서 긍정적인 감정을 활성화할 수 있는지 여부에 달려 있다. 시장은 다양한 동기와 감정으로 구서오딘 논리를 갖추고 있다. 고객과 소비자의 마음을 이해하고자 하는 사람이라면 먼저 이 논리를 이해해야 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 80p] 시간은 돈이 되었다. 이런 관점에서 보자면 시간은 돈과 똑같은 감정적 논리를 따르고 있다.
+    그러나 시간은 또 다른 감정적 차원을 갖고 있다. 고객이 자신의 욕구를 충족시키고 동기를 추구하고 싶다면 그에 대한 시간이 필요하다. 고객은 불쾌감을 주는 활동을 할 때 시간을 절약하려고 노력한다. 동시에 절약한 시간을 즐거운 활동을 하는 데 쓴다. 영화를 보러 가거나  목욕하러 가거나(자극), 클럽 앞에서 오픈카를 노골적으로 과시하며 주차한다(지배). 이처럼 돈을 절약할 수 있지만, 시간을 절약하는 일은 갈수록 어려워진다. 시간은 비축할 수 있는 게 아니기 때문이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 79p] 돈은 더 포괄적이고 보편적이며 일반화된 '가치의 상징'으로 소비자의 모든 욕구와 소망을 충족시킬 수 있게 돕는다. 소비자는 대형차를 구매할 수 있고(지배), 노후 및 건강대책을 업그레이드할 수 있으며(균형), 세계여행을 할 수도 있다(자극). 이것이 바로 돈의 매력이다. 돈은 모든 욕구를 충족시켜주는 '보편적인 열쇠'다. 그러나 충족시키고 싶은 욕구는 우리가 앞에서 알게 됐던 감정 시스템과 동기 시스템에서 만들어진다는 것을 기억하자. 때문에 뇌 속에서는 고유하거나 독립된 별도의 금전동기가 없다.
+    어떤 동기 시스템과 감정 시스템이 돈을 쓰게 하는 욕구의 원동력인지 늘 생각하고 질문해야 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 66p] 지배 시스템과 자극 시스템이 고객의 머릿속을 낙관적으로 만들고 활성화시키는 동기 시스템인 반면, 균형 시스템(결합과 돌봄을 포함해)은 억압적이고 비관적인 역할을 한다. 지배 시스템과 자극 시스템은 리스크를 감수하고서라도 많은 돈을 쓰도록 고객을 자극한다. 반대로 균형 시스템은 리스크를 방지하면서 절약하도록 독려한다. 또 한 가지 더 중요한 점이 있다. 낙관주의와 비관주의 사이에서 계속되는 주기적인 반복, 즉 지배/자극 시스템과 균형 시스템 사이의 반복은 경기순환의 심리학적·생물학적 원동력이기도 하다는 점이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 62-63p] 보상기대 시스템 중요한 특징은 영원히 만족하지 못한다는 점이다. 한번 주어진 보상에 빨리 익숙해져 다음 번 보상에서는 그만큼 만족하지 못하고 더 갈망한다. 보상기대 시스템의 영원한 불만족은 소비 사회를 이끌어가는 주요 원동력이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 62p] 보상 시스템은 두 가지의 기능으로 나뉜다. 하나는 즐거운 기대감을 통해 보상을 찾아낼 동기를 부여하는 보상기대 시스템이며, 다른 하나는 우리가 고대하던 물건을 구매할 때 좋은 감정으로 보상을 해주는 실제의 보상 시스템이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 60p] 성욕은 기존의 모든 감정 시스템에 분명하게 연관돼 있고, 번식이라는 목표를 달성하기 위해 이 감정 시스템을 이용한다. 다른 말로 표현하자면, 성욕은 이미 존재하는 감정 프로그램에 기본적으로 설정돼 있다는 것이다. 빅 3와 그 모듈들에 관여하는 수많은 뇌 영역과 호르몬 역시 결정적으로 성욕과 협력하고 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 56-57p] 빅 3의 마지막 감정 시스테인 지배 시스템은 경쟁자를 억압하ㅣ거나 축출하는 것을 목표로 하기 때문에 이견이 분분하다. 지배 시스템은 사람들에게 각종 자원과 섹스 파트너를 둘러싼 싸움에서 경쟁자를 물리치고 자신의 권력을 구축하며, 영역을 확장하라고 지시한다. 지배 시스템은 다음과 같은 명령을 내린다.<br>
+    * 끝까지 관철시켜라!<br>
+    * 지위를 얻고자 노력하라!<br>
+    * 타인보다 더 나은 사람이 돼라!<br>
+    * 권력을 키워라!<br>
+    * 경쟁자를 물리쳐라!<br>
+    * 영역을 확장하라!<br>
+    * 자율성을 보존하라!<br>
+    * 적극적으로 행동하라<br>
+    이 명령을 충실히 이행할 경우 인간(고객)은 자부심, 승리감, 우월감을 경험하게 된다. 그렇지 못할 경우에는 짜증, 분노, 불안을 경험하게 된다. 그렇다고 지배 시스템에 부정적인 면만 있는 것은 아니다. 정확히 따져보면 지배 시스템은 진보의 원동력이기도 하다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 54-55p] 자극 시스템은 다음과 같은 명령을 내린다.<br>
+    * 알려지지 않은 새로운 자극을 찾아 나서라!<br>
+    * 벗어나라!<br>
+    * 주변 환경을 발견하고 탐험하라!<br>
+    * 보상을 찾아라!<br>
+    * 지루함을 피하라!<br>
+    * 다른 사람들과 차별화된 존재가 돼라!<br>
+    이런 명령을 이행하면 고객은 재미와 가벼운 흥분감을 경험하게 되지만, 그렇지 못할 경우엔 지루함을 경험하게 된다. 균형 시스템과 마찬가지로 자극 시스템도 우리 삶에 없어서는 안 될 중요한 요소다. 자극 시스템에서 무엇보다 중요한 것은 예상치 못한 보상과 새로움이다. 진화의 관점에서 보면 이 시스템은 다음과 같은 점에서 굉장히 중요하다. 생물체는 새로운 생활환경, 새로운 영양의 원천을 개척해 새로운 능력과 기능을 습득한다. 그 덕분에 끊임없이 변화하는 환경에서 생존 가능성이 높아진다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 49p] 균형 시스템은 의심할 여지없이 고객의 뇌에서 가장 강력한 힘을 지닌 세력이다. 균형 시스템은 고객이 안전과 평화를 지향하게 하고, 모든 위험과 불확실성을 피해 조화를 추구하게 한다. 인생의 모든 것이 가장 익숙한 자리에 있고, 모든 것이 순조롭다면 균형 시스템은 인간을 행복하게 만든다. 이는 생물학적 세포의 기본원리인 항상성에 기인한다. 항상성은 세포들이 가급적 적은 에너지로 살아가게 하고, 내외부 환경 사이에서 에너지를 보존하는 평형 상태에 도달하게 한다. 균형 시스템은 다음과 같은 명령을 내린다.<br>
+    * 모든 위험을 피하라!<br>
+    * 모든 변화를 피하라. 습관을 만들어 가급적 오래 유지하라!<br>
+    * 모든 방해물과 불확실성을 피하라!<br>
+    * 내외적 안정을 추구하라!<br>
+    * 에너지 균형을 최적화하고 쓸모없이 에너지를 낭비하지 마라!<br>
+    이 명령이 성공적으로 이행될 때는 안정감과 안전함을 느끼게 되고 그렇지 못할 때는 불안, 공포, 공황을 경험하게 된다. 모든 감정 시스템은 균형 시스템처럼 위험을 피해 안전을 찾게 하는 것이 기본목표다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 19p] 실제로 소비자나 고객은 자신의 '머릿속'에서 일어나는 일에 별다른 영향을 끼치지 못한다. 그들의 의식은 뇌에서 일어나는 오랜 무의식의 처리 과정의 결과를 인지하는 데 그칠 뿐이다. 그들이 믿고 있는 것처럼 무의식의 처리 과정 정체를 의식하거나 거기에 영향력을 행사하지는 못한다. 제품이나 광고가 보내는 수많은 신호와 메시지는 소비자의 의식이 아닌 무의식을 자극하고, 그들의 생각과 행동에 상당한 영향을 미친다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 18p] 예측불가능한 고객들의 행동 뒤에 어떤 프로그램이 있는지 밝혀낼 수만 있다면, 고객의 마음을 읽고 행동을 예측하는 것이 가능해진다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 18p] 이성은 감정과 대립한다는 플라톤식 오해가 오늘날까지도 우리의 생각을 지배하고 있다. 하지만 뇌는 가급적 긍정적인 감정을 최대치로 끌어올리려 한다. 왜냐하면 우리의 생물학적 건강이 긍정적인 감정과 밀접한 연관이 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 17p] 무의식의 힘은 많은 사람들이 느끼는 것보다 훨씬 더 강력하다. 우리가 하는 결정의 70~80퍼센트 이상이 무의식적으로 일어난다. 의식적으로 일어나는 30퍼센트도 우리가 생각하는 것만큼 의식적이거나 자유롭지 않다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 17p] '고객은 의식적으로 결정을 내린다' 이 말은 궤변일 뿐이다. 우리가 의식적으로 행하는 일은 실제 우리의 뇌 속에서 일어나는 결정 과정이나 뇌의 작용과 거의 관계가 없다. 호주의 뇌 연구가 앨런 스나이더는 다음과 같이 재치 있는 말로 이를 정리했다. "의식이란, 자신이 나름의 역할을 하고 있음을 드러내고자 하는 당신 뇌의 홍보 활동일 뿐이다."
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 15p] 우리의 뇌 속에서 무의식적으로 일어나는 일들은 우리가 경험하거나 인지하는 것보다 훨씬 더 광범위하게 소비행동과 구매패턴에 영향을 미친다는 점이다. 동시에 소비자들이  자기 의지에 따라 자유롭고 합리적인 소비를 할 것이라는 믿음도 깨져버렸다. 아주 오래된 뇌 구조와 신경전달물질 및 호르몬이 소비와 구매를 결정하는 데 결정적 영향을 미친다면, 합리적이고 이성적인 소비는 불가능해지기 때문이다. 이 말은 결국 모든 소비자는 합리적이고 이성적으로 소비하지 않는다는 뜻이 된다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 552p] 자연이 우리에게 준 뇌를 향상시키는 가장 좋은 방법은 새로운 상황에 기분 좋게 적응하는 법을 배우는 것이다. 경험에 비추어보면 내가 그 무엇도 대신할 수 없는 무언가를 잃어버렸을 때 보통은 그보다 더 좋은 무언가가 그 자리를 대신해주었다. 낡은 것을 없애면 무언가 훨씬 멋진 것이 그 자리를 채워준다는 신념을 갖는 것. 그것이 바로 변화를 불러일으키는 관건이다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 534p] 정리의 가장 기본적인 원칙, 무언가를 잊어버리거나 잃어버리지 않게 하는 가장 결정적인 원칙은 바로 이것이다. 정리의 부담을 뇌에서 바깥세상으로 넘겨라. 이런 과정의 일부 혹은 전부를 뇌에서 물리적 세계로 떠넘길 수 있다면 실수할 가능성이 그만큼 줄어든다. 하지만 정리된 마음은 당신이 그저 실수를 피하는 것 이상의 일을 하게 해준다. 정리된 마음은 당신이 그렇지 않았다면 상상하지도 못했을 일을 하고, 상상하지 못했던 곳에 갈 수 있게 해준다.
+    <br><br>
+
+    <a></a>
+    [정리하는 뇌 472p] 정보 과부하 시대에 실패에 대비한 계획을 세워두려는 생각은 반드시 필요한 사고방식이다. (중략) 이런 사람들은 잘못 틀어질 수 있는 것으로 무엇이 있을지, 그리고 그것을 어떻게 막을지, 행여 발생했을 때는 어떻게 복구할지 생각하느라 많은 시간을 보낸다. 이런 능력을 소유한 종은 인간밖에 없다. 다른 그  어떤 동물도 미래를 대비해 계획을 세우고, 아직 일어나지도 않은 상황에서 어떻게 행동할지 전략을 짜지 않는다. 이런 계획은 개인적으로 정돈된 삶을 꾸리는 데만 중요한 것이 아니라 사업을 성공적으로 영위하는 데도 필수적이다. 이것은 결국 통제 소재로 귀결된다. 유능한 조직은 인간, 환경 등 외부적인 힘에 휘둘려 움직이기보다는 자신의 미래를 스스로 관리하기 위한 단계를 밟아 나간다.
+    <br><br>
 
     <a></a>
     [정리하는 뇌 445p] 그렇다면 사람들도 자기가 멀티태스킹에 소질이 없음을 깨닫고 포기하지 않겠느냐는 생각이 들겠지만, 인지적 착각이 일어나서 그렇게 하지 못한다. 이는 부분적으로는 도파민-아드레날린 피드백 고리에 의해 부채질되는 측면이 있다. 그래서 멀티태스킹을 하는 사람은 자기가 일을 잘하고 있다고 생각한다.
