--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,7 +50,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.100]</h1>
+    <h1>Karazhan Library[Lv.101]</h1>
 
     <p style="margin-top:45px;"><pre>
 
@@ -115,7 +115,8 @@
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.6]</h2></strong>
+    <h2><strong>심리학[Lv.7]</h2></strong>
+      [뇌, 욕망의 비밀을 풀다]-한스-게오르크 호이젤<br>
       [욕망의 진화]-데이비드 버스<br>
       <b>5x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b><br>
       [자제력 수업]-피터 홀린스<br>
@@ -176,6 +177,7 @@
 
     <p><pre>
       <h2>2020년 12월 독서</h2>
+        <li>심리:[뇌, 욕망의 비밀을 풀다]-한스-게오르크 호이젤</li>
         <li>처세술:[하버드 100년 전통 말하기 수업]-류리나</li>
     </p></pre>
 
