--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -56,7 +56,7 @@
 
 
 
-  <h1>The War of Genesis[Lv.107]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.108]</h1><br><br><br>
 
 
 
@@ -65,6 +65,18 @@
 
 
 
+
+  <a>안드로이드 JAVA : 02. Java - 09. 제어흐름 (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 8-2</a><br>
+
+  <a>안드로이드 JAVA : 02. Java - 08. 연산 (실습)</a><br>
+
+  <a>class101 자청 자동수익 강의 8-1</a><br>
+
+  <a>안드로이드 JAVA : 02. Java - 07. 연산자 (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 7-13</a><br>
 
   <a>안드로이드 JAVA : 02. Java - 06. 메소드 (실습)</a><br>
 
