--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -111,7 +111,7 @@
 
     <a></a>
     [뇌, 욕망의 비밀을 풀다 117p] '지성'은 '인식적' 지능이다. 지성으로 우리는 인과관계를 발견할 수 있고, 삶과 자연의 복잡성을 구조화할 수 있다. 즉 세계에 질서를 부여할 수 있다.
-    그런데 왜 우리는 세계에 질서를 부여할까? 첫째는 세계를 옟측하고 통제하기 위해서고, 둘째는 세계를 지배하기 위해서도. 두 가지 이유 모두 굉장이 감정적인데, 모두 Limbic® 맵의 '규율/통제'에 나와 있다. 지성을 감정의 끄트머리에 달린 물방울로도 볼 수 있다.
+    그런데 왜 우리는 세계에 질서를 부여할까? 첫째는 세계를 예측하고 통제하기 위해서고, 둘째는 세계를 지배하기 위해서도. 두 가지 이유 모두 굉장이 감정적인데, 모두 Limbic® 맵의 '규율/통제'에 나와 있다. 지성을 감정의 끄트머리에 달린 물방울로도 볼 수 있다.
     하지만 지성과 관련해 다른 중요한 측면이 있다. 지성은 인생의 요구사항을 극복하기 위한 도구라는 점이다. 이 도구를 어떻게 사용하는지는 감정 시스템에 의해 결정된다. 지성으로 기관총을 만들 수도 있고(지배 시스템), 기아 문제로 심각한 개발도상국을 위해 관개시설을 만들 수도 있다.(돌봄 모듈).
     <br><br>
 
@@ -130,7 +130,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 106-107p] 고객의 지갑을 열어 더 많은 돈을 쓰게 하려면, 돈과 이별하는 소비자의 고통을 긍정적인  감정으로 상쇄시켜줘야 한다. 상품 자체가 높은 감정적 가치를 전달할 때 더 비싼 값을 받을 수 있다. 체험적 성격이 강한(자극) 상품은 '되도록 적은 돈으로 많은 경험을 하는 것'을 충족시킨다. 만일 상품이 머릿속의 동기 및 감정 시스템을 지루하게 만들면 가치와 가격은 떨어진다. 지배 시스템은 가격 깎는 것을 능력의 척도로 여기는데, 상품 자체가 높은 지위와 독점권을 약속해준느 경우에는 흔쾌히 이런 싸움을 포기한다. 수많은 고급 브랜드가 가격을 비싸게 책정하는 것도 바로 가격 자체가 이미 배타적 독점을 표현하기 때문이다. 균형 시스템도 절약 행위에서 벗어나라고 꼬드길 때가 있는데, 높은 수준의 안전성, 품질, 신뢰성을 약속하는 상품과 서비스가 제공될 때다.
+    [뇌, 욕망의 비밀을 풀다 106-107p] 고객의 지갑을 열어 더 많은 돈을 쓰게 하려면, 돈과 이별하는 소비자의 고통을 긍정적인  감정으로 상쇄시켜줘야 한다. 상품 자체가 높은 감정적 가치를 전달할 때 더 비싼 값을 받을 수 있다. 체험적 성격이 강한(자극) 상품은 '되도록 적은 돈으로 많은 경험을 하는 것'을 충족시킨다. 만일 상품이 머릿속의 동기 및 감정 시스템을 지루하게 만들면 가치와 가격은 떨어진다. 지배 시스템은 가격 깎는 것을 능력의 척도로 여기는데, 상품 자체가 높은 지위와 독점권을 약속해주는 경우에는 흔쾌히 이런 싸움을 포기한다. 수많은 고급 브랜드가 가격을 비싸게 책정하는 것도 바로 가격 자체가 이미 배타적 독점을 표현하기 때문이다. 균형 시스템도 절약 행위에서 벗어나라고 꼬드길 때가 있는데, 높은 수준의 안전성, 품질, 신뢰성을 약속하는 상품과 서비스가 제공될 때다.
     <br><br>
 
     <a></a>
@@ -140,7 +140,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 102-103p] 고객의 욕망은 끝이 없다. 그들의 동기 및 감정 프로그램은 이미 얻은 것에 절대 만족하지 않는다. 이구동성을오 '더 많이'를 외친다. 그러다 보니 고객은 항상돈이 부족할 수밖에 없다. 세상의 다른 모든 생물체와 마찬가지로, 인생은 사람들에게 최소한의 자원(돈)과 에너지로 최대한의 욕구를 만족시키라는 과제를 매일매일 부과한다. (중략) 가급적 적은 돈으로 많은 욕구를 만족시키기 위해서는 소비하기 전에 신중히 검토하고 계산하고 노력해야 한다.
+    [뇌, 욕망의 비밀을 풀다 102-103p] 고객의 욕망은 끝이 없다. 그들의 동기 및 감정 프로그램은 이미 얻은 것에 절대 만족하지 않는다. 이구동성으로 '더 많이'를 외친다. 그러다 보니 고객은 항상돈이 부족할 수밖에 없다. 세상의 다른 모든 생물체와 마찬가지로, 인생은 사람들에게 최소한의 자원(돈)과 에너지로 최대한의 욕구를 만족시키라는 과제를 매일매일 부과한다. (중략) 가급적 적은 돈으로 많은 욕구를 만족시키기 위해서는 소비하기 전에 신중히 검토하고 계산하고 노력해야 한다.
     이처럼 '적은 지출'로 '최대한의 즐거움'을 끌어내는 것을 생물학과 철학에서는 '합리성'으로 이해한다. 그런데 이러한 형태의 합리성은 굉장히 감정적인 특징을 지니고 있다. 왜냐하면 긍정적이고 뿌듯한 감정은 최대화시키고, 부정적인 감정은 가급적 회피하려는 목적을 지니고 있기 때문이다.
     <br><br>
 
@@ -166,7 +166,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 81p] 상품과 서비스의 가치는 머릿속에서 긍정적인 감정을 활성화할 수 있는지 여부에 달려 있다. 시장은 다양한 동기와 감정으로 구서오딘 논리를 갖추고 있다. 고객과 소비자의 마음을 이해하고자 하는 사람이라면 먼저 이 논리를 이해해야 한다.
+    [뇌, 욕망의 비밀을 풀다 81p] 상품과 서비스의 가치는 머릿속에서 긍정적인 감정을 활성화할 수 있는지 여부에 달려 있다. 시장은 다양한 동기와 감정으로 구성된 논리를 갖추고 있다. 고객과 소비자의 마음을 이해하고자 하는 사람이라면 먼저 이 논리를 이해해야 한다.
     <br><br>
 
     <a></a>
@@ -184,7 +184,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 62-63p] 보상기대 시스템 중요한 특징은 영원히 만족하지 못한다는 점이다. 한번 주어진 보상에 빨리 익숙해져 다음 번 보상에서는 그만큼 만족하지 못하고 더 갈망한다. 보상기대 시스템의 영원한 불만족은 소비 사회를 이끌어가는 주요 원동력이다.
+    [뇌, 욕망의 비밀을 풀다 62-63p] 보상기대 시스템의 중요한 특징은 영원히 만족하지 못한다는 점이다. 한번 주어진 보상에 빨리 익숙해져 다음 번 보상에서는 그만큼 만족하지 못하고 더 갈망한다. 보상기대 시스템의 영원한 불만족은 소비 사회를 이끌어가는 주요 원동력이다.
     <br><br>
 
     <a></a>
@@ -196,7 +196,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 56-57p] 빅 3의 마지막 감정 시스테인 지배 시스템은 경쟁자를 억압하ㅣ거나 축출하는 것을 목표로 하기 때문에 이견이 분분하다. 지배 시스템은 사람들에게 각종 자원과 섹스 파트너를 둘러싼 싸움에서 경쟁자를 물리치고 자신의 권력을 구축하며, 영역을 확장하라고 지시한다. 지배 시스템은 다음과 같은 명령을 내린다.<br>
+    [뇌, 욕망의 비밀을 풀다 56-57p] 빅 3의 마지막 감정 시스테인 지배 시스템은 경쟁자를 억압하거나 축출하는 것을 목표로 하기 때문에 이견이 분분하다. 지배 시스템은 사람들에게 각종 자원과 섹스 파트너를 둘러싼 싸움에서 경쟁자를 물리치고 자신의 권력을 구축하며, 영역을 확장하라고 지시한다. 지배 시스템은 다음과 같은 명령을 내린다.<br>
     * 끝까지 관철시켜라!<br>
     * 지위를 얻고자 노력하라!<br>
     * 타인보다 더 나은 사람이 돼라!<br>
