--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -49,7 +49,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.14]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.16]</h1><br><br><br>
 
 
 
@@ -60,6 +60,67 @@
 
 
 
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 215p] 가족과 친구를 위해 즐거운 마음으로 요리하는 여성의 성향은 돌봄 호르몬과 결합 호르몬의 결합 때문이다. 남성의 경우는 이와 다르다. 남성이 요리용 숟가락을 휘저을 때는 주변의 인정을 바라는 욕구가 가득하다. 와인, 샴페인, 시가 같은 고가의 기호상품에 매력을 느끼는 이유 역시 뛰어난 맛 때문이 아니라 그 상품들이 선사하는 지위의 마법 때문이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 214p] 에스트로겐이 여성에게 매력적인 외모를 가장 우선시하도록 몰아가는 반면, 테스토스테론은 우월함과 탁월한 성능을 요구한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 213p] 에스트로겐은 여성의 머릿속에서 무의식적으로 주도권을 잡은 다음 자신의 매력을 끌어올려 발산하도록 유도한다. 반면 남성의 뇌 속에 있는 테스토스테론은 남성 경쟁자들과 싸워 물리치는 강인한 힘을 요구한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 209p] 테스토스테론의 강한 영향을 받는 남성은 물건을 구매하는 과정에서 세부적인 것을 살피지 않는다. 상품 진열대를 대충 쓰윽 흝기 때문에 차근차근 살펴봐야지만 찾을 수 있는 작은 상품들을 쉽게 놓친다. 남성은 '라지 스케일 네비게이터'다. 다시 말해 '수박 겉핥기식으로 사물을 대충 보는 사람'이라 할 수 있다.
+    여성의 시각은 이와 완전히 다르다. 여성은 남성에 비해 상품 진열대를 훨씬 더 꼼꼼히 관찰하며, 시선을 자주 멈춘다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 207p] 남성과 여성은 언어에서도 큰 차이를 보인다. 여성은 남성보다 훨씬 많은 단어를 사용하며 남성의 언어보다 훨씬 더 세분화되어 있다. 또한 여성은 관계에 대한 말을 자주 사용하며, 울림을 주는 부드럽고 다정한 단어를 애용한다. 따라서 상품을 설명할 때도 성별의 감정과 동기의 중심점에 맞춰서 해야 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 207p] 여성은 스키복과 스키용품을 멋진 외모를 완성해주는 패션 액세서리처럼 생각하는 경향이 강한 반면, 남성은 승리하기 위한 스포츠용품으로 생각한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 204-205p] 우리의 사고방식과 인지방식은 절대로 객관적이지 않으며, 호르몬과 신경전달물질의 영향력 아래 있다.
+    게다가 에스트로겐과 테스토스테론이 형태에 대한 감각을 바꾼다는 사실도 밝혀졌는데, 이는 특히 중요하다. 남성이 정사각형 모양의 직선적이고 실용적인 형태를 좋아한다면, 여성은 부드럽고 둥그런 형태를 선호한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 202p] 상품 카테고리에 대한 관심 역시 남녀 사이에 차이가 있다. 남성은 예측 가능하고, 세계를 지배하는 데 유용하며, 권력을 선사하는 기술 기반 제품을 좋아한다. 따라서 자동차, 기계, 기술 장비 등에 열관한다. 반면 여성은 소설과 예술처럼 상상력을 자극하는 상품과 물건에 강한 관심을 보인다. 또한 배려와 아늑함을 제공하는 물건들을 좋아한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 202p] 남녀의 뇌가 서로 다른 탓에 물건을 사기 전, 정보를 수집하는 태도 역시 상당한 차이를 보인다. 공개된 사실을 선호하는 남성은 테스트 보고소, 잡지, 체계적인 인터넷 검색으로 정보를 수집한다. 반면 여성은 다른 여성 지인들에게 해당 제품이나 업체에 대한 개인적인 체험을 묻는다. 따라서 입에서 입으로 퍼지는 입소문 광고는 여성들에게 큰 효과가 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 202p] 값비싼 물건을 사기 위해 큰 금액을 지출할 경우 남성은 전체 비중의 70퍼센를 제품에, 그리고 30퍼센트를 판매원에게 집중한다. 여성은 이와 완전히 다른 양상을 보인다. 무엇보다 상담과 설명을 해주는 판매원과의 감성적인 소통이 제대로 이뤄져야 물건을 구입한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 201-202p] 남성과 여성을 위한 광고 문구와 제품 설명이 달라야 한다는 것이다. 테스토스테론의 영향을 받는 남성들은 '정돈된 확고한 사실'을 선호하는 반면, 여성들은 개방적이고 환상을 자극하는 제품 설명에 끌린다. 동시에 여성들에게는 사회적인 요소와 의사소통에 관한 요소가 근본적으로 중요한 역할을 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 198-199p] 남성은 별로 중요해 보이지 않는 것을 사고 과정에서 제외시키고, 단순한 인과석을 신뢰하는 경향이 있다. 그래서 구매결정 과정이 신속해진다는 장점이 있으나 중요한 측면을 고려하지 못하고 놓친다는 단점도 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 198p] 테스토스테론이 남성의 좌뇌를 강하게활성화시키기 때문에 남자들은 일반적으로 여성과 사고체계가 완전히 다르다. 남성은 일상생활에서 1차원적으로 사고하고, 질서나 체계를 부여함으로써 세계를 단순화시키려 한다. 여성의 '관용 호르몬'인 에스트로겐은 우뇌에서 강하게 활성화되는데, 이는 여성이 남성보다 복합적으로 사고하는 이유를 설명해준다. 남성은 한 번에 하나씩 단계별로 사고하는 '스텝 싱커'다. 반면 여성은 여러 가지 일을 동시에 생각할 수 있는 '웹 싱커'다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 198p] 테스토스테론이 남성의 좌뇌를 강하게활성화시키기 때문에 남자들은 일반적으로 여성과 사고체계가 완전히 다르다. 남성은 일상생활에서 1차원적으로 사고하고, 질서나 체계를 부여함으로써 세계를 단순화시키려 한다. 여성의 '관용 호르몬'인 에스트로겐은 우뇌에서 강하게 활성화되는데, 이는 여성이 남성보다 복합적으로 사고하는 이유를 설명해준다. 남성은 한 번에 하나씩 단계별로 사고하는 '스텝 싱커'다. 반면 여성은 여러 가지 일을 동시에 생각할 수 있는 '웹 싱커'다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 187p] 생물학적 성별 차이를 살펴보고, 그에 대해 연구하는 것은 오랫동안 '정치적으로 잘못된 일'로 간주되어왔다. 남녀 간에는 공통점도 많지만 차이점도 무시하지 못할 정도로 많다. 여성은 남성과 사고방식도, 감정도, 구매방식도 다르다. 여성은 자유롭게 쓸 수 있는 자금의 70퍼센트 이상에 대해 권한을 갖고 있다. 여성과 남성, 모두에게 상품을 판매하고 싶다면 우선 유니섹스 안경을 벗어야 한다.
+    <br><br>
 
     <a></a>
     [뇌, 욕망의 비밀을 풀다 153p] 고객마다 욕구와 선호도는 각양각색이다. 각 개인들마다 뇌의 동기 시스템과 감정 시스템이 다르게 혼합되어 있기 때문에 이런 차이점이 발생한다. 뇌 연구에서 얻은 결과물을 기준으로 고객을 분류하고, 고객 유형에 맞춘 상품과 브랜드를 파악할 수 있다면 고객의 마음(변연계)을 명중시킬 수 있다.
