--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -65,6 +65,13 @@
 
 
 
+
+
+
+  <a>안드로이드 JAVA : 02. Java - 11. 제어흐름2 (개념)</a><br>
+
+  <a>class101 자청 자동수익 강의 8-4</a><br>
+
   <a>안드로이드 JAVA : 02. Java - 10. 제어흐름 (실습)</a><br>
 
   <a>class101 자청 자동수익 강의 8-3</a><br>
