--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,7 +50,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.101]</h1>
+    <h1>Karazhan Library[Lv.102]</h1>
 
     <p style="margin-top:45px;"><pre>
 
@@ -152,7 +152,8 @@
     <h2><strong>과학[Lv.2]</h2></strong>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-    <h2><strong>자기계발[Lv.5]</h2></strong>
+    <h2><strong>자기계발[Lv.6]</h2></strong>
+      [메타인지, 생각의 기술]-오봉근<br>
       [정리하는 뇌]-대니얼 J. 레비틴<br>
       [커피 한 잔의 명상으로 10억을 번 사람들]-오시마 준이치<br>
       [최강 멘탈]-쓰지 유시후미<br>
@@ -177,6 +178,7 @@
 
     <p><pre>
       <h2>2020년 12월 독서</h2>
+        <li>자기계발:[메타인지, 생각의 기술]-오봉근</li>
         <li>심리:[뇌, 욕망의 비밀을 풀다]-한스-게오르크 호이젤</li>
         <li>처세술:[하버드 100년 전통 말하기 수업]-류리나</li>
     </p></pre>
