--- a/The_war_of_genesis.html
+++ b/The_war_of_genesis.html
@@ -56,7 +56,7 @@
 
 
 
-  <h1>The War of Genesis[Lv.108]</h1><br><br><br>
+  <h1>The War of Genesis[Lv.109]</h1><br><br><br>
 
 
 
@@ -67,6 +67,9 @@
 
 
 
+  <a>안드로이드 JAVA : 02. Java - 12. 제어흐름2 (실습)</a><br>
+
+  <a>class101 자청 자동수익 강의 8-5</a><br>
 
   <a>안드로이드 JAVA : 02. Java - 11. 제어흐름2 (개념)</a><br>
 
