--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -73,7 +73,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 209p] 테스토스테론의 강한 영향을 받는 남성은 물건을 구매하는 과정에서 세부적인 것을 살피지 않는다. 상품 진열대를 대충 쓰윽 흝기 때문에 차근차근 살펴봐야지만 찾을 수 있는 작은 상품들을 쉽게 놓친다. 남성은 '라지 스케일 네비게이터'다. 다시 말해 '수박 겉핥기식으로 사물을 대충 보는 사람'이라 할 수 있다.
+    [뇌, 욕망의 비밀을 풀다 209p] 테스토스테론의 강한 영향을 받는 남성은 물건을 구매하는 과정에서 세부적인 것을 살피지 않는다. 상품 진열대를 대충 쓰윽 훑기 때문에 차근차근 살펴봐야지만 찾을 수 있는 작은 상품들을 쉽게 놓친다. 남성은 '라지 스케일 네비게이터'다. 다시 말해 '수박 겉핥기식으로 사물을 대충 보는 사람'이라 할 수 있다.
     여성의 시각은 이와 완전히 다르다. 여성은 남성에 비해 상품 진열대를 훨씬 더 꼼꼼히 관찰하며, 시선을 자주 멈춘다.
     <br><br>
 
@@ -95,7 +95,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 202p] 남녀의 뇌가 서로 다른 탓에 물건을 사기 전, 정보를 수집하는 태도 역시 상당한 차이를 보인다. 공개된 사실을 선호하는 남성은 테스트 보고소, 잡지, 체계적인 인터넷 검색으로 정보를 수집한다. 반면 여성은 다른 여성 지인들에게 해당 제품이나 업체에 대한 개인적인 체험을 묻는다. 따라서 입에서 입으로 퍼지는 입소문 광고는 여성들에게 큰 효과가 있다.
+    [뇌, 욕망의 비밀을 풀다 202p] 남녀의 뇌가 서로 다른 탓에 물건을 사기 전, 정보를 수집하는 태도 역시 상당한 차이를 보인다. 공개된 사실을 선호하는 남성은 테스트 보고서, 잡지, 체계적인 인터넷 검색으로 정보를 수집한다. 반면 여성은 다른 여성 지인들에게 해당 제품이나 업체에 대한 개인적인 체험을 묻는다. 따라서 입에서 입으로 퍼지는 입소문 광고는 여성들에게 큰 효과가 있다.
     <br><br>
 
     <a></a>
@@ -107,15 +107,11 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 198-199p] 남성은 별로 중요해 보이지 않는 것을 사고 과정에서 제외시키고, 단순한 인과석을 신뢰하는 경향이 있다. 그래서 구매결정 과정이 신속해진다는 장점이 있으나 중요한 측면을 고려하지 못하고 놓친다는 단점도 있다.
+    [뇌, 욕망의 비밀을 풀다 198-199p] 남성은 별로 중요해 보이지 않는 것을 사고 과정에서 제외시키고, 단순한 인과성을 신뢰하는 경향이 있다. 그래서 구매결정 과정이 신속해진다는 장점이 있으나 중요한 측면을 고려하지 못하고 놓친다는 단점도 있다.
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 198p] 테스토스테론이 남성의 좌뇌를 강하게활성화시키기 때문에 남자들은 일반적으로 여성과 사고체계가 완전히 다르다. 남성은 일상생활에서 1차원적으로 사고하고, 질서나 체계를 부여함으로써 세계를 단순화시키려 한다. 여성의 '관용 호르몬'인 에스트로겐은 우뇌에서 강하게 활성화되는데, 이는 여성이 남성보다 복합적으로 사고하는 이유를 설명해준다. 남성은 한 번에 하나씩 단계별로 사고하는 '스텝 싱커'다. 반면 여성은 여러 가지 일을 동시에 생각할 수 있는 '웹 싱커'다.
-    <br><br>
-
-    <a></a>
-    [뇌, 욕망의 비밀을 풀다 198p] 테스토스테론이 남성의 좌뇌를 강하게활성화시키기 때문에 남자들은 일반적으로 여성과 사고체계가 완전히 다르다. 남성은 일상생활에서 1차원적으로 사고하고, 질서나 체계를 부여함으로써 세계를 단순화시키려 한다. 여성의 '관용 호르몬'인 에스트로겐은 우뇌에서 강하게 활성화되는데, 이는 여성이 남성보다 복합적으로 사고하는 이유를 설명해준다. 남성은 한 번에 하나씩 단계별로 사고하는 '스텝 싱커'다. 반면 여성은 여러 가지 일을 동시에 생각할 수 있는 '웹 싱커'다.
+    [뇌, 욕망의 비밀을 풀다 198p] 테스토스테론이 남성의 좌뇌를 강하게 활성화시키기 때문에 남자들은 일반적으로 여성과 사고체계가 완전히 다르다. 남성은 일상생활에서 1차원적으로 사고하고, 질서나 체계를 부여함으로써 세계를 단순화시키려 한다. 여성의 '관용 호르몬'인 에스트로겐은 우뇌에서 강하게 활성화되는데, 이는 여성이 남성보다 복합적으로 사고하는 이유를 설명해준다. 남성은 한 번에 하나씩 단계별로 사고하는 '스텝 싱커'다. 반면 여성은 여러 가지 일을 동시에 생각할 수 있는 '웹 싱커'다.
     <br><br>
 
     <a></a>
