--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>GRUZAM - AI Industry Trends</title>
+  <title>GRUZAM - Ancient Spells</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 
@@ -33,7 +33,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
@@ -59,6 +60,92 @@
 
 
 
+
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 293p] 제품이나 서비스가 성공적으로 팔리기를 원한다면 의도적으로 미세하고 작은 신호를 심어두어야 한다. 타깃 그룹에 맞는 감정을 만들어내려면 큐 매니지먼트를 이용해 미세한 신호를 구성할 필요가 있다. 시각, 청각, 미각, 촉각 등 인간의 모든 감각을 염두에 두고 큐 매니지먼트를 활용해야 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 291-292p] 사회적 존재인 인간에게 상대의 기분을 정확하게 해석하는 것은 생존과 직결된 문제였다. 그만큼 얼굴 표정은 인간의 뇌에서 특별한 의미를 지닌다.
+    우리 뇌에서 무의식적으로 처리되어 행동에 영향을 끼치는 것은 얼굴 표정과 신체 언어뿐만이 아니다. 모든 제품들은 무수히 많은 메시지를 내보내고, 이 메시지들은 변연계에서 평가되고 해독된다. 제품명, 제품 설명, 색상, 형태, 향, 맛, 부드러운지 바삭한지, 뜨거운지 차가운지 등 이 모든 것이 메시지다.
+    평가를 거친 모든 메시지의 흔적은 우리 뇌에 상당히 깊이 남는다. 그리고 이러한 흔적을 바탕으로 제품에 대한 호감 혹은 반감이 생긴다. 고객의 의식에는 제품에 대한 평가뿐만 아니라 호감이나 반감의 감정도 숨겨져 있다. 그러니 고객들이 의식적으로 받아들이고 표현할 수 있는 메시지만이 구매결정을 유도할 수 있다고 생각한다면 오산이다. 실제로 구매결정은 고객의 의식에 도달하지 않은 메시지를 통해 이뤄진다는 사실을 기억하기 바란다!
+    고객이, 자신이 물건을 구매한 이유를 잘 알고 명확한 의식에 따라 구매결정을 한다는 건 잘못된 속설이다. 고객에게 물건을 팔고 싶다면 이런 잘못된 믿음에서 벗어나라! 이성이 지배하는 의식을 믿지 말아야 한다. 정말 신경 쓸 것은 사소한 디테일과 제품 및 서비스와 관련된 무의식적 메시지다. 무의식적 메시지의 원칙은 광고에도 동일하게 적용된다. 훌륭한 광고 감독이라면 1초도 되지 않는 짧은 순간 등장하는 사소한 디테일도 꼼꼼하게 살펴야 한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 290p] 브랜드, 제품, 서비스는 많은 신호와 자극(큐)을 내보낸다. 이러한 신호와 자극은 고객과 소비자가 의식하지 못하는 사이 상당한 영향을 미친다. '큐 매니지먼트'는 고도의 유혹 기술이다. 훌륭한 큐 매니지먼트는 고객의 모든 감각을 일깨워 그들의 목적을 은연중에 호소한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 288-289p] 소비자의 머릿속에 자신의 브랜드가 차지할 지정석을 만들고 싶다면 브랜드만의 고유한 이야기를 만들고, 개성을 살려 연출해야 한다. 이런 방식의 브랜드 연출은 결코 쉽지 않다. 직원들을 영입하고, 기업 커뮤니케이션을 도입하며, 인터넷 사이트에 변화를 꾀하고, 포장지도 새로이 인쇄하는 등 다양한 측면에서 노력이 필요하기 때문이다.
+    브랜드 연출이란 브랜드의 아주 세세한 디테일과 신호를 일일이 신경 써야 한다는 걸 의미한다. 그러나 이 때 우리가 유념해야 할 것이 있다. 의식조차 하지 못한 여러 사소한 신호가 구매태도에 강력한 영향을 미친다는 점 말이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 287p] 사람들은 광고제작자들이 거금을 들여 제작한, 아름답지만 언제든지 교체 가능한 화면이나 실제로 감정을 자극하는 사진들을 보며 즐거워한다. 그러나 이런 식의 천편일률적인 브랜드 정책에는 값비싼 대가가 따른다. 브랜드에 내제되어 있던 영혼, 독창성, 긴장, 개성이 파괴되기 때문이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 286p] 그렇다면 컬트 브랜드에서 배울 수 있는 것은 무엇일까? 브랜드에는 영혼, 신화, 이야기가 있어야 한다. 과거를 되살리고 인간의 희망과 동경을 반영하는 신화가 필요하다. 뇌 속에는 정신을 추구하는 동경, 의미, 그리고 의미를 전달하는 이야기가 자리 잡고 있다. 이때 신피질, 더 정확히 말하자면 신피질의 앞부분인 전전두피질이 영향을 미친다. 전전두피질의 가장 중요한 과제 중 하나는 이야기의 다양한 감각적 인상과 감각의 형태를 결합하는 것이다. 눈으로 보는 것과 귀로 듣는 것은 완전히 다르지만, 의식 속에서는 통합된 것을 체험한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 285-286p] 컬트 브랜드에는 그들만의 신화가 있다. 무엇보다 이런 컬트 브랜드 뒤에는 인격, 행동, 아이디어, 비전 측면에서 해당 브랜드와 밀접한 관련을 맺고 있는 사람들이 당당하게 버티고 서 있다.
+    (중략) 컬트 브랜드는 작지만 독창적인 특징을 지닌 사람과 견줄 수 있다. 컬트 브랜드는 살아 있으며, 매혹적인 이야기와 신화가 브랜드와 그 주변을 휘감고 있따. 이는 오늘날까지 브랜드의 이미지를 규정하고, 브랜드 제품에 반영된다. 이처럼 효과적인 신화는 매우 단순한 감정구조를 바탕으로 한다. 대부분 이런 브랜드 뒤에는 그 이름만으로도 신뢰감을 부여하고, 모든 것을 설명해주는 소유자나 소유자 가문이 버티고 있다. 컬트 브랜드는 깨끗하고 순수한 것이 아니라 오히려 제멋대로다. 컬트 브랜드가 더욱 큰 호감을 불러일으키는 것도 이런 이유 때문이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 284p] 전통적인 광고는 의심의 여지없이 감정의 핵에 집중했어야만 했다. 그러나 이제 브랜드는 감정적인 측면에서 차별화된 유희를 가능하게 하는 여러 다양한 채널을 통해 소비자들과 소통한다. 이를테면 독특한 직원, 이벤트, 프로모션, 전통적인 PR, 인터넷 광고, 제품 포장, 매장 전시, 사용 설명서, 핫라인 등이 여기에 해당한다. 이런 모든 매체는 브랜드의 핵(핵심적인 감정영역)을 붉은 실처럼 관통해야만 한다. 이런 매체는 브랜드가 보유한 하나 혹은 또 다른 감정영역을 구축하는 데 여러 가능성을 제공하게 된다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 283p] 보존 요소와 전투 요소의 절묘한 결합은 브랜드에 심오한 깊이와 감정적인 긴장감을 선사했다. 그리고 이렇게 서로 다른 가치영역 사이에 맴도는 긴장감이 해당 브랜드를 더욱 더 흥미롭고 매력적으로 만든다. 성공하는 브랜드는 항상 핵심 감정영역을 보유하고 있지만, 동시에 다른 감정영역도 자극한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 266-269p] 소비자의 머릿속에 특정 브랜드를 위한 지정석을 마련하고 싶다면 아주 사소한 디테일까지 빠짐없이 꼼꼼하게 신경써야 한다.
+    (중략) 기업 브랜드건 제품 브랜드건 간에 브랜드에는 기업의 가장 중요한 가치가 담겨 있다. 본질적인 가치 창출은 생산시설이 아닌 고객의 머릿속에서 이뤄진다. 생산시설과 건물은 대체 가능하지만, 고객의 머릿속에 자리 잡은 강력한 브랜드는 그 무엇으로도 대체할 수 없다.
+    이런 이유로 성공적인 브랜드 경영은 경영자의 몫이다. 브랜드에 대한 책임은 광고회사에 위임할 수도 없고, 위임해서도 안 된다. 광고회사는 조언하고, 브랜드를 론칭하는 데 동참하며, 브랜드를 가시화하는 데 도움을 줄 수 있다. 하지만 브랜드를 직접적으로 경영하지는 못한다. 왜냐하면 실질적이고 진정한 브랜드 경영은 기업의 의식 속에서 시작되기 때문이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 266-268p] 그렇다면 강력한 신경브랜드 네트워크는 어떻게 구축되는 것일까? 동일한 브랜드 메시지를 지속적으로 반복하는 과정을 통해서 생성된다. 브랜드 전문가인 클라우스 브란트마이어가 설명한 것처럼 성공을 거둔 브랜드는 자기유사성을 보유하고 있다. 이는 무엇을 뜻하는 것일까? 우리 의식 속에 자리 잡은 브랜드 이미지(모양과 감정영역)가 수십 년이 넘도록 거의 동일하게 남는 것을 말한다.
+    (중략) 신경브랜드 네트워크는 네트워크에 속한 신경세포가 반복해서 동시에 활성화될 때 생성된다. 이때 중요한 것은 바로 '반복'이다. 일회성의 브랜드 메시지 전달만으로는 효과를 볼 수 없다. 왜냐하면 인간의 뇌는 매일 약 2,000건에 달하는 다른 브랜드 메시지를 접하기 때문이다. 뇌 속에 새로운 신경브랜드 네트워크를 구축하고 유지하려면 에너지가 소모된다. 이는 진화의 원칙인 에너지 절약에 위배되므로, 뇌는 새로운 신경브랜드 네트워크의 구축을 반기지 않는다.
+    감정을 통해 뇌에 그 의미를 전달하는 브랜드만이 뇌 속에 신경 네트워크를 구축할 수 있는 공간을 확보한다. 그러나 이것은 겨우 기초공사에 불과하다. 최대한 동일한 감정과 형태의 메시지를 지속적으로 반복 전달해야 네트워크 속 신경세포들을 연결하는 좁은 오솔길이 너른 고속도로로 전환될 수 있기 때문이다. 만일 브랜드 형태와 감정영역을 지속적으로 변화시키면, 계속해서 새로운 공사를 처음부터 다시 시작해야 한다. 기초공사를 힘들게 끝내자마자 엄청난 비용을 들여 머릿속에 새로운 구덩이를 파야 하는 셈이다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 265p] 우리는 구매결정이 원칙적으로 뇌가 주도하는 감정적인 효용성 계산에 의해 좌우된다는 것을 알고 있다. 따라서 슈퍼코드로 눈에 띄는 것뿐만 아니라, 동시에 브랜드 특유의 감정을 활성화시키는 브랜드들이 시장에서 우위를 차지하고 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 263p] 브랜드는 뇌 속에 있는 신경 네트워크라고 할 수 있다. 그런데 신경 네트워크에는 매운 특별한 특징이 있다. 네트워크에 참가하고 있는 요소 가운데 일부만 동시에 자극받아도 전체 네트워크가 활성화된다는 점이다. 다시 말해, 약간의 지시 신호만으로도 머릿속에 있는 전체 브랜드 이미지를 활성화시키고, 이를 통해 구매결정에 무의식적인 영향력을 행사할 수 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 262-263p] 해마는 신피질 내에서 동시에 활성화된 수천 개의 신경세포를 통해 여러 정보를 결합시켜 만든 전체적인 상을 신경 네트워크에 저장한다. 이런 종류의 신경브랜드 네트워크는 신피질 전역으로 광범위하게 뻗어나갈 수 있다. 브랜드의 시각적 요소는 시각적 자극을 처리하는 대뇌피질 후방에 저장된다(후두엽과 두정엽). 광고음악과 같은 음향 요소는 측면에 있는 측두엽에 저장된다. 브랜드 이미지의 감정적인 요소는 신피질 전방에 있는 영역인 안와전두피질과 편도체에 저장된다.
+    신경브랜드 이미지는 뇌 속에 있는 다양한 신경세포가 동시에 연결되어 광범위한 네트워크가 형성되면서 만들어진다. 상품과 감정적인 광고 메시지가 함께 등장하는 빈도가 높을수록 네트워크에 속해 있는 신경세포 사이의 결함이 더 강력해진다. 신경세포들이 반복해서 네트워크 이웃에 대해 말할수록 네트워크에 속해 있지 않은 다른 신경세포의 신호보다 그 신호에 더 빠르게 반응한다. 전문용어로 이런 메커니즘을 장기 강화라고 일컫는다.
+    (중략) 뇌의 학습 욕구는 나이가 들어감에 따라 급격히 감소한다. 더불어 새로운 신경브랜드 이미지를 확립하려는 의욕도 줄어든다. 어린이, 청소년, 젊은 사람들의 뇌는 새로운 신경 네트워크를 최대한 많이 구축하고 확립하게끔 프로그래밍되어 있다. 반면 나이 든 사람들의 뇌는 새로운 네트워크 구축에 저항하며 가급적 기존의 신경 네트워크와 경험을 바탕으로 인생을 이끌어나가려고 시도한다. 고객의 뇌에 브랜드의 지정석을 확실히 마련하고자 한다면 이런 점을 반드시 명심해야 한다. 이미 다양한 브랜드의 회사들이 그 일을 시행하는 중이다. 그들은 전자 게임, 어린이 만화책, 어린이 영화, 청소년 이벤트 등을 통해 어린이들에게 그들의 브랜드를 소개하는 데 많은 돈을 지출하고 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 261p] 브랜드에는 두 가지 중요한 기능이 있다. 인지도를 통해 복잡함과 결정에 따른 불확실성을 감소시켜준다. 즉, 자동 모드로 전환된 뇌는 고민하느라 더 이상 불필요한 에너지를 소모하지 않아도 된다. 그러나 브랜드의 가장 중요한 기능은 상대에게 긍정적인 감정을 불러일으키는 데 있다. 예컨대 안정감과 아늑함(균형/돌봄), 즐거움에 대한 약속(자극), 새로운 것과 자극적인 것이 선사하는 짜릿함(모험), 지위와 우월감(지배) 혹은 모든 것을 장악하고 통제할 수 있다는 느낌(규율/통제)을 안겨준다.
+    이런 감정은 주로 변연계에서 일어나는 학습 과정을 통해 생겨난다. 브랜드가 시장에 처음 진출하면 변연계에서 신속한 학습을 담당하는 부위, 즉 안와전두피질이 활성화된다. 그러나 니베아나 폭스바겐처럼 오래전부터 있었던 브랜드가 보유한 감정의 가치는 변연계 중에서도 오래되고 깊숙한 곳에 위치해 있는 편도체에 특별히 저장된다.
+    고객의 뇌는 진화 과정에서 입증된 비교적 간단한 학습 원리에 의해 작동한다. 외부의 자극(그림, 소리, 사건 등)과 신체 내부의 신호(감정, 내면의 목소리 등)가 함께 나타날 때마다 서로 결합된다. 이때 이런 다양한 정보들이 실제로 관련이 있는지 여부는 중요하지 않다. 이것들이 동시에 연상된 것만으로도 뇌는 전체적인 상을 만들어내고, 그것을 저장한다. 광고에서 항상 상품과 특정 감정을 유발하는 메시지를 함께 결합시켜 제시하는 것도 바로 그런 이유 때문이다. 이렇게 다양한 정보의 연결 과정은 주로 해마에서 일어난다. 그리고 뇌의 막후 실력자인 편도체가 대부분의 감정 평가 작업에 동참한다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 259p] 브랜드는 상품의 특성과 감정 세계가 서로 결합되어 있는 신경 네트워크다. 강력한 브랜드는 약간의 신호만으로도 뇌 전체의 네트워크를 활성화시키고, 그것으로 구매결정에 무의식적인 영향력을 행사한다. 특정 브랜드가 장악한 감정의 영역이 많을수록 뇌 속에서 해당 브랜드의 가치는 상승한다. 컬트 브랜드는 스토리텔링에 아주 틍한데, 이 이야기들은 신화와 결합되어 있다.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 245p] 나이든 사람들은 조언을 구하는 빈도와 강도도 점점 늘어나며, 구매결정을 내리기까지 시간이 오래 걸린다. 뇌의 정보처리 속도가 그만큼 떨어졌기 때문이다. 이와 관련해서는 추후 다시 살펴보기로 하자.
+    <br><br>
+
+    <a></a>
+    [뇌, 욕망의 비밀을 풀다 235p] 젊은 사람들은 큰돈을 지출할 때 꼼꼼하게 계산하거나, 만약에 대비해 저축하는 경우가 상대적으로 드물다. 젊은 사람들이 유일하게 계산하는 방식은 '어떻게 하면 최소의 비용으로 많은 자극 및 지배 시스템을 만족시킬 수 있을까?'이다.
+    <br><br>
 
     <a></a>
     [뇌, 욕망의 비밀을 풀다 215p] 가족과 친구를 위해 즐거운 마음으로 요리하는 여성의 성향은 돌봄 호르몬과 결합 호르몬의 결합 때문이다. 남성의 경우는 이와 다르다. 남성이 요리용 숟가락을 휘저을 때는 주변의 인정을 바라는 욕구가 가득하다. 와인, 샴페인, 시가 같은 고가의 기호상품에 매력을 느끼는 이유 역시 뛰어난 맛 때문이 아니라 그 상품들이 선사하는 지위의 마법 때문이다.
@@ -808,7 +895,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
