--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     float: left;
     width: 33.33%;
     padding: 10px;
-    height: 200px; /* Should be removed. Only for demonstration */
+    height: 300px; /* Should be removed. Only for demonstration */
   }
 
   /* Clear floats after the columns */
@@ -76,7 +76,8 @@
     </ul>
     <ul class="column2" align="center" style="font-size: 25px; background-color:#2874A6; list-style: none; margin-top:0px; margin-bottom:0px;">
         <div>
-          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_genesis.html" class="inactive" style="color:#2874A6">The War of Genesis</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_genesis_II.html" class="inactive" style="color:#2874A6">The War of Genesis II</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_genesis_III.html" class="inactive" style="color:#2874A6">The War of Genesis III</a></li>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_taiji.html" class="inactive" style="color:#2874A6">The War of Taiji</a></li>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Strategy_and_tactics.html" class="inactive" style="color:#2874A6">Strategy & Tactics</a></li>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Merriam_Webster's.html" class="inactive" style="color:#2874A6">Merriam Webster's</a></li>
