--- a/以虞待不虞者勝.html
+++ b/以虞待不虞者勝.html
@@ -33,7 +33,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
@@ -48,7 +49,7 @@
   </ul>
 
   <div id="contents">
-    <img src="진설화난영참.jpg" width="100%">
+    <img src="무신멸뢰옥.jpg" width="100%">
 
 
   <h1>以虞待不虞者勝[Lv.5]</h1>
@@ -805,7 +806,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
