--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -33,7 +33,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
@@ -461,7 +462,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
