--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -33,7 +33,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="active">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
@@ -47,7 +48,7 @@
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
   </ul>
   <div id="contents">
-    <img src="천지파열무.jpg" width="100%">
+    <img src="설화난영참.jpg" width="100%">
 
 
   <h1>Strategy & Tactics[Lv.12]</h1><br><br><br>
@@ -533,7 +534,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="active">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
