--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -33,7 +33,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="active">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
@@ -48,7 +49,7 @@
   </ul>
 
   <div id="contents">
-    <img src="블리자드스톰.jpg" width="100%">
+    <img src="천지파열무.jpg" width="100%">
 
 
 
@@ -2513,7 +2514,8 @@
     <br>
 
     <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="inactive">The War of Genesis III</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="active">The War of Taiji</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
